# coastercount_backend

./: README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: models.py  serializers.py  urls.py  views.py
backend/app/management/commands/: consume_telemetry.py
backend/app/migrations/: 0001_initial.py
backend/config/: settings.py
backend/scripts/: rabbit_consumer.py  send_telemetry_messages.py  wait-for-it.py
rabbitmq/: rabbitmq-local.Dockerfile
rabbitmq/config/: definitions.json  rabbitmq.conf
