[tool.poetry]
name = "coasters-backend"
version = "0.1.0"
description = ""
authors = ["James Ross <james.i.ross5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1.1"
beautifulsoup4 = "^4.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
